--- a/vmadmin/templates/vmadmin_gpu_detail.html
+++ b/vmadmin/templates/vmadmin_gpu_detail.html
@@ -27,10 +27,10 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <h2 class="panel-title">
-    	<strong>卸载GPU</strong>
+    	<strong>GPU信息</strong>
     </h2>
   </div>
-  <div class="panel-body">
+ <div class="panel-body">
 
     {% csrf_token %}
 	<div class="form-group">
@@ -47,16 +47,34 @@
 	    </div>
 	</div>
 	<div class="form-group">
-	    <label for="name"  class="col-sm-3 control-label">云主机</label>
+	    <label for="name"  class="col-sm-3 control-label">已挂载云主机</label>
 	    <div class="col-sm-9">
 	    	<span class="form-value">{{info.vm}}</span>
 	    </div>
 	</div>
+	<div class="form-group">
+	    <label for="name"  class="col-sm-3 control-label">挂载时间</label>
+	    <div class="col-sm-9">
+	    	<span class="form-value">{{info.attach_time}}</span>
+	    </div>
 	</div>
+	<div class="form-group">
+	    <label for="name"  class="col-sm-3 control-label">是否可用</label>
+	    <div class="col-sm-9">
+	    	<span class="form-value">{{info.enable}}</span>
+	    </div>
+	</div>
+	<div class="form-group">
+	    <label for="name"  class="col-sm-3 control-label">备注</label>
+	    <div class="col-sm-9">
+	    	<span class="form-value">{{info.remarks}}</span>
+	    </div>
+	</div>
+</div>
 	<div class="panel-footer">
 	  <div align="right">
 	  {%if info.vm %}
-	  <button type="button" class="btn btn-sm btn-success" onclick="gpu_umount({{info.id}})">卸载</button>
+	  <button type="button" class="btn btn-sm btn-danger" onclick="gpu_umount({{info.id}})">卸载</button>
 			<script type="text/javascript">
 			function gpu_umount(gpu_id) {
 				$.ajax({
