统计模块:改为实时读取数据库信息

--- a/reports/templates/reports_alloc_center.html
+++ b/reports/templates/reports_alloc_center.html
@@ -3,12 +3,10 @@
 {% load percentageformat %}
 {%block base%}
 
-<!-- 
-<script type="text/javascript" src="/static/js/vm_list.js"></script> -->
 <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/highcharts.js"></script>
 
-<h3>分中心资源分配图表</h3>
+<h4>分中心资源分配图表</h4>
 <hr/>
 {% if r_alloc_c %}
 <table class="table">
@@ -31,7 +29,7 @@
         <td>{{r.mem_total | sizeformat:'MB'}}</td>
         <td>{{r.mem_used | sizeformat:'MB'}}</td>
         <td>{{r.mem_used_rate | percentageformat}}</td> 
-        <td>{{r.hostcount}}</td> 
+        <td>{{r.host_count}}</td> 
     </tr>
 {%endfor%}
 </table>
