--- a/vmadmin/templates/common/vm_opreration.html
+++ b/vmadmin/templates/common/vm_opreration.html
@@ -21,7 +21,7 @@
 			      <li><button class="btn btn-xs btn-info" style="width:100px;margin-top:2px" onclick="javascript:window.location.href='/vmadmin/vm/reset/?vmid={{vm.uuid}}'">重置镜像</button></li>
                   <li><button class="btn btn-xs btn-info" style="width:100px;margin-top:2px" onclick="javascript:window.location.href='/vmadmin/vm/migrate/?vmid={{vm.uuid}}'">关机迁移</button></li>
                   <!-- <li><button class="btn btn-xs btn-info" style="width:100px;margin-top:2px" onclick="javascript:window.location.href='/vmadmin/vm/snap/create/?vmid={{vm.uuid}}'">创建快照</button></li> -->
-                  <li><button class="btn btn-xs btn-info" style="width:100px;margin-top:2px" onclick="javascript:window.location.href='/vmadmin/vm/snap/list/?vmid={{vm.uuid}}'">快照功能</button></li>
+                  <li><button class="btn btn-xs btn-info" style="width:100px;margin-top:2px" onclick="javascript:window.location.href='/vmadmin/vm/snap/create/?vmid={{vm.uuid}}'">创建快照</button></li>
 			      <!-- <li><button class="btn btn-xs btn-info" style="width:100px;margin-top:2px" onclick="vm_reset('/vmadmin/vm/op/','{{vm.uuid}}')">系统初始化</button></li> -->
 	      		<li><button class="btn btn-xs btn-danger" style="width:100px;margin-top:2px" onclick="vm_delete_force('/vmadmin/vm/op/','{{vm.uuid}}','{{ need_refresh }}')">强制删除</button></li>
 	      	</ul>
