novnc和center,group,image list等API

--- a/novnc/templates/novnc.html
+++ b/novnc/templates/novnc.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="/static/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/static/jquery2.2.4/dist/jquery-2.2.4.min.js"></script>
 	<style type="text/css">
 	.safe-close{
 		position:absolute;
